--- a/introduction.html
+++ b/introduction.html
@@ -276,7 +276,7 @@
                     </a>
                 </nav>
             </div>
-            <div class="mt-auto border-t border-slate-300 pt-4">
+            <div class="mt-auto pt-4 border-t border-slate-300">
                 <button class="sidebar-toggle flex items-center justify-center w-full" id="sidebar-toggle" aria-expanded="true" aria-label="Toggle sidebar">
                     <span class="material-symbols-outlined text-slate-600 transition-transform duration-300">flip</span>
                 </button>
